add class to components html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Juan Jose Vega</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="images/site.webmanifest">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <section>
-    <img src="./images/photo-profile-little-dimensions.jpg" width="250" height="250" alt="Photo Juan" />
+  <section class="hero">
+    <figure class="hero-img">
+      <img src="./images/photo-profile-little-dimensions.jpg" width="250" height="250" alt="Photo Juan" />
+    </figure>
     <h1>Juan Jose Vega</h1>
     <h2>Software Developer</h2>
-    <div>
+    <div class="logos">
       <a href="https://www.instagram.com/juan.jose.vega" target="_blank">IG</a>
       <a href="https://twitter.com/juanjosevega17" target="_blank">TW</a>
       <a href="https://github.com/juanjosevega99" target="_blank">GIT</a>
