--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   <section class="hero">
     <figure class="hero-img">
-      <img src="./images/photo-profile-little-dimensions.jpg" width="250" height="250" alt="Photo Juan" />
+      <!-- <img src="./images/photo-profile-little-dimensions.jpg" width="250" height="250" alt="Photo Juan" /> -->
+      <img src="./images/photo-profile-little-dimensions.jpg" alt="Photo Juan" />
     </figure>
     <h1>Juan Jose Vega</h1>
     <h2>Software Developer</h2>
