--- a/index.html
+++ b/index.html
@@ -18,14 +18,35 @@
     </figure>
     <h1>Juan Jose Vega</h1>
     <h2>Software Developer</h2>
-    <div class="logos">
+
+    <ul>
+      <li>
+        <a href="https://www.instagram.com/juan.jose.vega" target="_blank">IG</a>
+      </li>
+      <li>
+        <a href="https://twitter.com/juanjosevega17" target="_blank">TW</a>
+      </li>
+      <li>
+        <a href="https://github.com/juanjosevega99" target="_blank">GIT</a>
+      </li>
+      <li>
+        <a href="https://bio.torre.co/juanjosevegaq" target="_blank">TORRE</a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/juan-jose-v-0b349ba0/" target="_blank">LINK</a>
+      </li>
+      <li>
+        <a href="https://medium.com/@juanjosevega17" target="_blank">MEDIUM</a>
+      </li>
+    </ul>
+    <!-- <div class="logos">
       <a href="https://www.instagram.com/juan.jose.vega" target="_blank">IG</a>
       <a href="https://twitter.com/juanjosevega17" target="_blank">TW</a>
       <a href="https://github.com/juanjosevega99" target="_blank">GIT</a>
       <a href="https://bio.torre.co/juanjosevegaq" target="_blank">TORRE</a>
       <a href="https://www.linkedin.com/in/juan-jose-v-0b349ba0/" target="_blank">LINK</a>
       <a href="https://medium.com/@juanjosevega17" target="_blank">MEDIUM</a>
-    </div>
+    </div> -->
   </section>
 </body>
 </html>
