--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://twitter.com/juanjosevega17" target="_blank">TW</a>
       </li>
       <li>
-        <a href="https://github.com/juanjosevega99" target="_blank">GIT</a>
+        <a href="https://github.com/juanjosevega99" target="_blank">GITHUB</a>
       </li>
       <li>
         <a href="https://bio.torre.co/juanjosevegaq" target="_blank">TORRE</a>
