correction links username

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 
     <ul>
       <li>
-        <a href="https://www.instagram.com/juan.jose.vega" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/juanjosevega99" target="_blank">Instagram</a>
       </li>
       <li>
-        <a href="https://twitter.com/juanjosevega17" target="_blank">Twitter</a>
+        <a href="https://twitter.com/juanjosevega99" target="_blank">Twitter</a>
       </li>
       <li>
         <a href="https://github.com/juanjosevega99" target="_blank">GitHub</a>
       </li>
       <li>
-        <a href="https://bio.torre.co/juanjosevegaq" target="_blank">Torre</a>
+        <a href="https://bio.torre.co/juanjosevega99" target="_blank">Torre</a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/juan-jose-v-0b349ba0/" target="_blank">LinkedIn</a>
+        <a href="www.linkedin.com/in/juanjosevega99" target="_blank">LinkedIn</a>
       </li>
       <li>
-        <a href="https://medium.com/@juanjosevega17" target="_blank">Medium</a>
+        <a href="https://medium.com/@juanjosevega99" target="_blank">Medium</a>
       </li>
     </ul>
   </section>
