repairing LinkedIn link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="https://bio.torre.co/juanjosevega99" target="_blank">Torre</a>
       </li>
       <li>
-        <a href="www.linkedin.com/in/juanjosevega99" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/juanjosevega99" target="_blank">LinkedIn</a>
       </li>
       <li>
         <a href="https://medium.com/@juanjosevega99" target="_blank">Medium</a>
