design and caption

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="images/site.webmanifest">
   <link rel="stylesheet" href="css/styles.css">
+
+  <link
+    href="https://fonts.googleapis.com/css?family=Charmonman|Montserrat&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <section class="hero">
@@ -17,7 +22,11 @@
     </figure>
 
     <h1>Juan Jose Vega</h1>
-    <h2>Software Developer</h2>
+    <h2>
+      I'm a software developer specialist in Backend <br/> 
+      who lives, breathe and creates technology. <br/> 
+      Never stop learning and currently focusing on JavaScript and Python.
+    </h2>
 
     <ul>
       <li>
