--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <h1>Juan Jose Vega</h1>
     <p>
       I'm a software developer specialist in Backend <br/> 
-      who lives, breathe and creates technology. <br/> 
-      Never stop learning and currently focusing on JavaScript and Python.
+      who lives, breathes and creates technology. <br/> 
+      Never stop learning and currently focusing on JavaScript wih NodeJS
     </p>
 
     <ul>
