--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>
       I'm a software developer specialist in Backend <br/> 
       who lives, breathes and creates technology. <br/> 
-      Never stop learning and currently focusing on JavaScript wih NodeJS
+      Never stop learning and currently focusing on JavaScript with NodeJS
     </p>
 
     <ul>
