--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <h1>Juan Jose Vega</h1>
     <p>
-      I'm a software developer specialist in Backend <br/> 
-      who lives, breathes and creates technology. <br/> 
+      Hello there, I'm a software developer specialist in solve problems <br/> 
+      and optimize products, who lives, breathes and creates technology. <br/> 
       Never stop learning and currently focusing on JavaScript with NodeJS
     </p>
 
