--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section class="hero">
     <figure class="hero-img">
-      <img src="./images/photo-profile-little-dimensions.jpg" alt="Photo Juan" />
+      <img src="./images/profile-picture.jpg" alt="Photo Juan" />
     </figure>
 
     <h1>Juan Jose Vega</h1>
