improve the bio

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <h1>Juan Jose Vega</h1>
     <p>
-      Hello there, I'm a software developer specialist in solve problems <br/> 
-      and optimize products, who lives, breathes and creates technology. <br/> 
-      Never stop learning and currently focusing on JavaScript with NodeJS
+      Hi there, I'm a software engineer specialist in solving problems,<br/> 
+      optimizing products, and keeping the end-user in mind.<br/> 
+      With expertise in NodeJS and React, I would be an asset to your team.
     </p>
 
     <ul>
